添加mqtt相关代码模块

--- a/code/.vscode/settings.json
+++ b/code/.vscode/settings.json
@@ -27,6 +27,7 @@
         "tuple": "cpp",
         "type_traits": "cpp",
         "utility": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "*.cpp_bak": "cpp"
     }
 }
