--- a/code/.vscode/settings.json
+++ b/code/.vscode/settings.json
@@ -32,6 +32,7 @@
         "cmath": "cpp",
         "deque": "cpp",
         "numeric": "cpp",
-        "cinttypes": "cpp"
+        "cinttypes": "cpp",
+        "cjson.h": "c"
     }
 }
