modbus_read_holdingdata函数待处理

--- a/code/.vscode/settings.json
+++ b/code/.vscode/settings.json
@@ -34,6 +34,7 @@
         "numeric": "cpp",
         "cinttypes": "cpp",
         "cjson.h": "c",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "string": "cpp"
     }
 }
